--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,10 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   /* выше установили ограничения для секции */
 }
 
@@ -26,6 +30,46 @@
 .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-right: 0;
+  margin-right: 64px;
   margin-top: 80px;
+}
+
+.logo {
+  width: 183px;
+  height: 32px;
+}
+
+.logo_place_header {
+  margin-top: 30px;
+  margin-left: 64px;
+}
+
+.header__title {
+  width: 730px;
+  margin-left: 64px;
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: bold;
+}
+
+.header__subtitle {
+  width: 388px;
+  margin: 0 0 30px 64px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.header__link {
+  text-decoration: none;
+  color: #2f80ed;
+}
+
+.header_main-illustration {
+  position: absolute;
+  width: 765px;
+  height: 608px;
+  bottom: 0px;
+  right: 0px;
 }
