--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -10,28 +11,15 @@
 }
 
 .header {
+  display: flex;
+  align-items: center;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   background-color: #f2f2f2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  margin: 0 auto;
+  position: relative;
   /* выше установили ограничения для секции */
-}
-
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
-}
-
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 64px;
-  margin-top: 80px;
 }
 
 .logo {
@@ -39,26 +27,33 @@
   height: 32px;
 }
 
-.logo_place_header {
-  margin-top: 30px;
-  margin-left: 64px;
+.logo__place_header {
+  position: absolute;
+  height: 32px;
+  width: 183px;
+  top: 30px;
+  left: 64px;
 }
 
 .header__title {
-  width: 730px;
-  margin-left: 64px;
-  font-family: 'Helvetica Neue', 'Arial', sans-serif;
-  font-size: 102px;
+  margin: 0 0 0 64px;
   line-height: 96px;
+  max-width: 730px;
+  font-size: 102px;
   font-weight: bold;
+  z-index: 4;
 }
 
 .header__subtitle {
-  width: 388px;
-  margin: 0 0 30px 64px;
+  position: absolute;
+  bottom: 30px;
+  margin: 0;
   line-height: 25px;
+  max-width: 388px;
   font-size: 18px;
   font-weight: normal;
+  left: 64px;
+  z-index: 3;
 }
 
 .header__link {
@@ -66,10 +61,259 @@
   color: #2f80ed;
 }
 
-.header_main-illustration {
+.header__main-illustration {
   position: absolute;
   width: 765px;
   height: 608px;
   bottom: 0px;
   right: 0px;
+  z-index: 5;
 }
+
+.header__square-pic {
+width: 569px;
+height: 568px;
+position: absolute;
+right: 0px;
+top: 64px;
+background-color: #2f80ed;
+z-index: 4;
+}
+
+.description {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 80%;
+  margin: 100px auto;
+}
+
+.two-columns__brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.two-columns__main-text {
+  min-width: 784px;
+  width: 80%;
+}
+
+.two-columns__paragraph {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 30px auto;
+}
+
+.section-title {
+  width: 60%;
+  margin: 100px auto 20px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table {
+  width: 1100px;
+  display: flex;
+  margin: 0 auto;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-bottom: 100px;
+}
+
+.table__cell {
+width: 250px;
+margin: 60px 0 0 0;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 20px 0 0;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 20px 0 0;
+}
+
+.feynman {
+  display: block;
+  height: 790px;
+  background-color: #f2f2f2;
+  padding-top: 100px;
+  position: relative;
+  z-index: 1;
+}
+
+.feynman__title {
+  width: 648px;
+  margin: 0 auto 70px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+}
+
+.feynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+  z-index: 2;
+}
+
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: #2f80ed;
+  text-decoration: none;
+  position: absolute;
+  bottom: 50%;
+  right: 46px;
+  z-index: 2;
+}
+
+.feynman__image {
+  width: 867px;
+  height: 637px;
+  z-index: -1;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.kaufman {
+  padding-top: 90px;
+  background-color: #1f1f1f;
+  position: relative;
+  overflow: hidden; 
+}
+
+.section-title_theme-dark {
+  margin: 0 auto 20px;
+  color: white;
+}
+
+.section-subtitle_theme-dark {
+  color: white;
+}
+
+.table__cell_theme-dark {
+  width: 200px;
+  margin: 80px 0 0 0;
+  z-index: 1;
+}
+
+.table_theme-dark {
+  margin-bottom: 90px;
+  padding-bottom: 0;
+}
+
+.table__heading_theme-dark {
+  color: white;
+  margin: 0 0 20px;
+}
+
+.table__text_theme-dark {
+  color: white;
+  margin: 0;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+}
+
+.footer {
+  height: 250px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  background-color: #1f1f1f;
+}
+
+.footer__columns {
+  height: 250px;
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer__column_copyright {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 711px;
+}
+
+.logo_place_footer {
+width: 183px;
+height: 35px;
+}
+
+.footer__author {
+  margin: 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+}
+
+.footer__column_info {
+  align-self: start;
+}
+
+.footer__column-heading {
+  margin: 0 0 20px;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+
+.footer__column-links {
+  align-self: start;
+}
+
+.footer_column-link {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: none;
+  color: white;
+}
+
+.footer_social-icon {
+  margin-right: 10px;
+}
+
