--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@
   height: 32px;
 }
 
-.logo__place_header {
+.logo_place_header {
   position: absolute;
   height: 32px;
   width: 183px;
@@ -67,20 +67,20 @@
   height: 608px;
   bottom: 0px;
   right: 0px;
-  z-index: 5;
+  z-index: 2;
 }
 
 .header__square-pic {
-width: 569px;
+width: 568px;
 height: 568px;
 position: absolute;
 right: 0px;
 top: 64px;
 background-color: #2f80ed;
-z-index: 4;
+z-index: 1;
 }
 
-.description {
+.two-columns {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -89,6 +89,7 @@ z-index: 4;
 }
 
 .two-columns__brief {
+  margin: 0;
   width: 175px;
   line-height: 1.2;
   font-size: 18px;
@@ -102,16 +103,21 @@ z-index: 4;
 }
 
 .two-columns__paragraph {
+  margin: 0 0 30px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+}
+
+.two-columns__paragraph:last-child {
+  margin: 0;
 }
 
 .two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
-  margin: 30px auto;
+  margin: 0 auto;
 }
 
 .section-title {
@@ -151,7 +157,7 @@ margin: 60px 0 0 0;
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
-  margin: 20px 0 0;
+  margin: 0;
 }
 
 .table__text {
@@ -184,7 +190,6 @@ margin: 60px 0 0 0;
   font-size: 36px;
   font-weight: normal;
   text-align: center;
-  z-index: 2;
 }
 
 .feynman__link {
@@ -194,9 +199,8 @@ margin: 60px 0 0 0;
   color: #2f80ed;
   text-decoration: none;
   position: absolute;
-  bottom: 50%;
+  top: 50%;
   right: 46px;
-  z-index: 2;
 }
 
 .feynman__image {
@@ -210,47 +214,51 @@ margin: 60px 0 0 0;
 
 .kaufman {
   padding-top: 90px;
+  padding-bottom: 90px;
   background-color: #1f1f1f;
   position: relative;
   overflow: hidden; 
+  z-index: 0;
 }
 
-.section-title_theme-dark {
+.section-title_theme_dark {
   margin: 0 auto 20px;
   color: white;
 }
 
-.section-subtitle_theme-dark {
+.section-subtitle_theme_dark {
   color: white;
 }
 
-.table__cell_theme-dark {
+.table__cell_theme_dark {
   width: 200px;
   margin: 80px 0 0 0;
-  z-index: 1;
 }
 
-.table_theme-dark {
-  margin-bottom: 90px;
+.table_theme_dark {
+  margin-bottom: 0;
   padding-bottom: 0;
 }
 
-.table__heading_theme-dark {
+.table__heading_theme_dark {
   color: white;
   margin: 0 0 20px;
 }
 
-.table__text_theme-dark {
+.table__text_theme_dark {
   color: white;
   margin: 0;
 }
 
 .kaufman__triangle {
+  background-image: url(/images/kaufman-triangle.svg);
   width: 877px;
   height: 877px;
   position: absolute;
+  background-size: contain;
   top: 0;
   right: -210px;
+  z-index: -1;
 }
 
 .footer {
@@ -269,7 +277,7 @@ margin: 60px 0 0 0;
   justify-content: space-between;
 }
 
-.footer__column_copyright {
+.footer__column_content-copyright {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -282,14 +290,14 @@ height: 35px;
 }
 
 .footer__author {
-  margin: 0;
+  margin: 18px 0 18px;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
   color: white;
 }
 
-.footer__column_info {
+.footer__column_content-info {
   align-self: start;
 }
 
@@ -302,15 +310,21 @@ height: 35px;
 }
 
 .footer__column-links {
-  align-self: start;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
-.footer_column-link {
+.footer__column-link {
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
   text-decoration: none;
   color: white;
+}
+
+.footer__column_content-social {
+  align-self: start;
 }
 
 .footer_social-icon {
