--- a/styles/style.css
+++ b/styles/style.css
@@ -221,6 +221,17 @@ margin: 60px 0 0 0;
   z-index: 0;
 }
 
+.kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  background-size: contain;
+  top: 0;
+  right: -210px;
+  z-index: -1;
+}
+
 .section-title_theme_dark {
   margin: 0 auto 20px;
   color: white;
@@ -248,17 +259,6 @@ margin: 60px 0 0 0;
 .table__text_theme_dark {
   color: white;
   margin: 0;
-}
-
-.kaufman__triangle {
-  background-image: url(/images/kaufman-triangle.svg);
-  width: 877px;
-  height: 877px;
-  position: absolute;
-  background-size: contain;
-  top: 0;
-  right: -210px;
-  z-index: -1;
 }
 
 .footer {
