--- a/styles/style.css
+++ b/styles/style.css
@@ -71,13 +71,13 @@
 }
 
 .header__square-pic {
-width: 568px;
-height: 568px;
-position: absolute;
-right: 0px;
-top: 64px;
-background-color: #2f80ed;
-z-index: 1;
+  width: 568px;
+  height: 568px;
+  position: absolute;
+  right: 0px;
+  top: 64px;
+  background-color: #2f80ed;
+  z-index: 1;
 }
 
 .two-columns {
@@ -169,7 +169,7 @@ margin: 60px 0 0 0;
 
 .feynman {
   display: block;
-  height: 790px;
+  min-height: 790px;
   background-color: #f2f2f2;
   padding-top: 100px;
   position: relative;
@@ -221,17 +221,6 @@ margin: 60px 0 0 0;
   z-index: 0;
 }
 
-.kaufman__triangle {
-  background-image: url(../images/kaufman-triangle.svg);
-  width: 877px;
-  height: 877px;
-  position: absolute;
-  background-size: contain;
-  top: 0;
-  right: -210px;
-  z-index: -1;
-}
-
 .section-title_theme_dark {
   margin: 0 auto 20px;
   color: white;
@@ -261,15 +250,26 @@ margin: 60px 0 0 0;
   margin: 0;
 }
 
+.kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  background-size: contain;
+  top: 0;
+  right: -210px;
+  z-index: -1;
+}
+
 .footer {
-  height: 250px;
+  min-height: 250px;
   padding-top: 60px;
   padding-bottom: 40px;
   background-color: #1f1f1f;
 }
 
 .footer__columns {
-  height: 250px;
+  min-height: 250px;
   width: 90%;
   margin: 0 auto;
   display: flex;
@@ -327,7 +327,7 @@ height: 35px;
   align-self: start;
 }
 
-.footer_social-icon {
+.footer__social-icon {
   margin-right: 10px;
 }
 
