Внесены конечные конечных правок :)) согласно ревью

--- a/styles/style.css
+++ b/styles/style.css
@@ -186,6 +186,7 @@
 }
 
 .feynman__subtitle {
+  margin: 0;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
@@ -277,7 +278,7 @@
   justify-content: space-between;
 }
 
-.footer__column_content-copyright {
+.footer__column_content_copyright {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -297,7 +298,7 @@ height: 35px;
   color: white;
 }
 
-.footer__column_content-info {
+.footer__column_content_info {
   align-self: start;
 }
 
@@ -323,7 +324,7 @@ height: 35px;
   color: white;
 }
 
-.footer__column_content-social {
+.footer__column_content_social {
   align-self: start;
 }
 
